resolves #822 - node title&slot alignment

--- a/less/editor.less
+++ b/less/editor.less
@@ -317,6 +317,12 @@ div.graph-node {
 			  display:table-cell;
 			  width:100%;
 			}
+		    &.p_in label {
+			  padding: 5px 5px 5px 10px;
+			}
+			&.p_out label {
+			  padding: 5px 10px 5px 5px;
+			}
 		}
 
 	  	.p_slot.p_compatible {
